# E-sports-Website-with-django-framework

./: LICENSE  README.md  docker-compose.yml  pyproject.toml
core/: settings.py  urls.py
esports/: admin.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
esports/migrations/: 0001_initial.py  0002_alter_customuser_role.py  0003_admingame.py  0004_alter_admingame_game_alter_game_bases_and_more.py
