[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "esports_backend"
version = "0.1.0"
description = "Backend Django con PostgreSQL"
authors = [
    { name="Giomar", email="gmunozcu@unsa.edu.pe" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=4.2",
    "djangorestframework",
    "dj-database-url",
    "python-dotenv",
    "psycopg2-binary",
    "drf-yasg",
    "djangorestframework-simplejwt",
    "django-cors-headers",
    "django-environ",
    "Pillow"
]


[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
    "black",
    "isort",
    "flake8"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"*" = ["*.env"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = ["test_*.py"]
addopts = "--reuse-db"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
order_by_type = false
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
lines_between_sections = 1
no_lines_before = ["LOCALFOLDER"]
case_sensitive = false
group_by_package = false
force_sort_within_sections = false

# Secciones y detección de módulos locales
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
known_first_party = ["core", "esports"]

[tool.flake8]
max-line-length = 120
exclude = [
    ".venv",
    "__pycache__",
    "migrations",
    "static",
    "media",
]
ignore = [
    "E203",  # Conflicto con Black
    "W503",  # Conflicto con Black
]
max-complexity = 10
